[tool.poetry]
name = "diagnostic"
version = "0.1.0"
description = ""
authors = ["Louis Dupont <louis-dupont@live.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160